Add more helpers to quietly create java.net.URL objects